# freetubepc

./: 1737462346.4591355.csv  Cargo.toml  README.md
src/: main.rs
src/algo/: cnc.rs  mod.rs
src/device/: app.rs  graphics.rs
src/remote/: in_state.rs
src/shaders/: selection_shader.wgsl
src/ui/: app_settings.rs  keypad.rs  mod.rs  renderer.rs  ui_renderer.rs  uis.rs
src/utils/: materials.rs
