#https://drive.google.com/drive/folders/1nIPhVgslOEu4tb16TIFRPvCjSpYIAriw?usp=sharing
#stdlib-local-copy
[package]
name = "freetubpc"
version = "0.1.0"
edition = "2021"

[dependencies]

#instant = "0.1.13"
#nanoid = "0.4.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
utf8-read = "0.4.0"
once_cell = "1.21.3"
env_logger = "0.11.8"
#parking_lot = "0.12.3"
itertools = "0.14.0"


truck-base = { git = "https://github.com/ricosjp/truck.git" }
#ruststep = { git = "https://github.com/ricosjp/ruststep.git" }
ruststep = { version = "0.4.0",features = ["ap201","ap203"] }
truck-geometry = { git = "https://github.com/ricosjp/truck.git" }
#truck-geotrait = { git = "https://github.com/ricosjp/truck.git" }
truck-modeling = { git = "https://github.com/ricosjp/truck.git" }
#truck-polymesh = { git = "https://github.com/ricosjp/truck.git" }
truck-topology = { git = "https://github.com/ricosjp/truck.git" }
truck-meshalgo = { git = "https://github.com/ricosjp/truck.git" }
#truck-shapeops = { git = "https://github.com/ricosjp/truck.git" }
truck-stepio = { git = "https://github.com/ricosjp/truck.git" }
#clap = "4.5.20"
#bvh = { version = "0.8.0",features = ["serde"] }
#triangle = "0.2.0"
#smaa = "0.15.0"
#smaa = {  path = "crates/smaa-rs" }
smaa = "0.16.0"
#smaa = { path = "../smaa-rs" }
#bitflags = "2.6.0"
log = "0.4.27"
pollster = "0.4.0"
#kurbo = "0.11.1"
#glyphon = "0.6.0"
#glyphon = { git = "https://github.com/grovesNL/glyphon.git" }
#HasRawWindowHandle
#https://stackoverflow.com/questions/77373416/the-trait-raw-window-handlehasrawdisplayhandle-is-not-implemented-for-windo

#winit = { git="https://github.com/rust-windowing/winit.git"}
winit = { version = "0.30.9" }
is-odd = "1.1.1"
palette = { version = "0.7.6", default-features = true, features = ["named", "named_from_str", "bytemuck"] }
#wgpu={git = "https://github.com/gfx-rs/wgpu.git",features = ["webgpu"]}
#wgpu = { version = "22.1.0", default-features = false,features = ["webgl","wgsl"]}
wgpu = { version = "24.0.3" }
image = "0.25.6"
rand = "0.9.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
cgmath = "0.18.0"
#nalgebra = "0.33.2"
#glob = "0.3.1"
#byteorder = "1.5.0"



#cfg-if = "1.0.0"
#zerocopy = { version = "0.8.9", features = ["derive"] }
#tokio = { version = "1.41.1", features = ["sync", "rt", "macros"] }
#serde_json = "1.0.132"
serde = { version = "1.0.219", features = ["derive"] }
phf = "0.11.3"
rusttype = "0.9.3"
shipyard = "0.8.0"
egui = "0.31.1"
type-map = "0.5.0"
ahash = "0.8.11"
epaint = "0.31.1"
#egui-wgpu = { version = "0.30.0",features = ["winit"] }
egui-winit = "0.31.1"
egui_extras = "0.31.1"
eframe = "0.31.1"
profiling = "1.0.16"
rfd = "0.15.3"
#matches = "0.1.10"